# syncrim-pac

./: Cargo.toml  syncrim_rv32i_fastclic.svd
src/: gpio.rs  lib.rs  mtime.rs
src/gpio/: clear.rs  config.rs  enable.rs  interrupt_enable.rs  set.rs  toggle.rs
src/mtime/: mtime_comp_hi.rs  mtime_comp_lo.rs  mtime_hi.rs  mtime_lo.rs
