[package]
name = "syncrim-pac"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = {version="1.1.2", optional=true}
riscv = "0.11.0"
riscv-rt = "0.12.1"
vcell = "0.1.3"
clic = {git="https://github.com/onsdagens/clic", branch="csr_pend"}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
